@@ -17,6 +17,7 @@ CHANGELOG Roundcube Webmail
 - Fix regression in displaying contents of message/rfc822 parts (#1490606)
 - Fix handling of message/rfc822 attachments on replies and forwards (#1490607)
 - Fix PDF support detection in Firefox > 19 (#1490610)
+- Fix path traversal vulnerability in setting a skin (#1490620)
 
 RELEASE 1.1.3
 -------------
